# cuMesh

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: FindCGAL.cmake  FindThrust.cmake  FindVCG.cmake
cuDiEdge/: SurfaceMesh.cpp  SurfaceMesh.h
cuDiEdge/cuda/: HalfEdgeElementType.cuh  HalfEdgeNavigators.cuh  UpdateTopoly.cu
cuMesh/: HalfEdgeElementType.cuh  HalfEdgeElementType.h  HalfEdgeNavigators.cuh  SurfaceMesh.cpp  SurfaceMesh.h
cuMesh/algorithm/: SurfaceMeshOperation.cuh  SurfaceMeshOperation.h  SurfaceSmoothing.cuh  SurfaceSmoothing.h  UpdateTopology.cuh  UpdateTopology.h
cuMesh/cuda/: SurfaceMeshOperation.cu  SurfaceSmoothing.cu  UpdateTopology.cuh  UpdateTopoly.cu
docs/: CMakeLists.txt  Doxyfile.in  bibliography.bib  footer.html  header.html
tests/: CMakeLists.txt  TestCudaConvertHedge.cpp  TestCudaPGGF.cpp
